# MVA-IA-Env-project

./: .gitignore  README.md  pyproject.toml
waste_prediction/: params.py
waste_prediction/experiments/: arima.py  arima_multi.py  helpers.py  helpers_multi.py  light_gbm.py  light_gbm_multi.py  lr.py  lr_multi.py  lstm.py  lstm_multi.py  n_beats.py  n_beats_multi.py  prophet_.py  prophet_multi.py  rf.py  rf_multi.py  run.py  tcn.py  tcn_multi.py  transformer.py  transformer_multi.py
waste_prediction/process_data/: moratuwa_mc_2014-2018.ipynb
waste_prediction/processed_data/boralasgamuwa_uc_2012-2018/: imputed_data.csv
waste_prediction/processed_data/boralasgamuwa_uc_2012-2018/preprocessing_cache/: lag-150_est-100_dpt-3_subsmp-0.9_eta-0.1.json
waste_prediction/processed_data/moratuwa_mc_2014-2018/: imputed_data.csv
waste_prediction/processed_data/moratuwa_mc_2014-2018/preprocessing_cache/: lag-49_est-10_dpt-9_subsmp-0.7_eta-0.3.json
waste_prediction/reports/: 10_plot_image.py  15_plot_image.py  area_mape_plots.py  daily_box_plots.py  data_sample.py  dataset_average.py  mini_plots.py  ml_vs_dl.py  model_average.py  model_error.py  model_parameters.py  model_performance.py  single_vs_multi.py
waste_prediction/util/: custom_progress_bar.py  metrics.py  model.py
